# auto-c

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac
include/: types.h
src/: Makefile.am
