bin_PROGRAMS=$(top_builddir)/bin/types 
__top_builddir__bin_types_SOURCES = types.c
__top_builddir__bin_types_CPPFLAGS = -Wall -g -I../include
__top_builddir__bin_types_LDFLAGS = 
__top_builddir__bin_types_LDADD = -L/usr/lib/x86_64-linux-gnu -L/lib/x86_64-linux-gnu -L/lib64 -l:libcheck.a  -lm -lrt -lpthread -lsubunit 
